@@ -1,8 +1,8 @@
 package com.example.sixnumber.lotto.entity;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.persistence.Column;
 import javax.persistence.ElementCollection;
@@ -42,7 +42,7 @@ public class WinNumber {
 
 	public WinNumber(WinNumberRequest request) {
 		List<Integer> bonusInclude = Arrays.stream(request.getNumbers()
-				.split(" ")).map(Integer::parseInt).toList();
+				.split(" ")).map(Integer::parseInt).collect(Collectors.toList());
 		List<Integer> topNumberList = bonusInclude.subList(0, bonusInclude.size()-1);
 
 		this.data = request.getDate();
